[gd_scene load_steps=11 format=3 uid="uid://2kgopxd3wlfa"]

[ext_resource type="Script" path="res://src/class/gui/SplashSceen.gd" id="1_ekul7"]
[ext_resource type="Texture2D" uid="uid://bkta6730f3yq6" path="res://assets/textures/gui/logo.png" id="2_a38ju"]
[ext_resource type="FontFile" uid="uid://dulkhboh163q5" path="res://assets/textures/fonts/LTAspirerNeue-Bold.otf" id="2_cl43o"]
[ext_resource type="AudioStream" uid="uid://dhqwawxb2qwlv" path="res://assets/audios/boot_audio.wav" id="3_46yd0"]
[ext_resource type="FontFile" uid="uid://bn4aesmm0sxr5" path="res://assets/textures/fonts/ZiTiChuanQiTeZhanTi-MianFeiShangYong-2.ttf" id="4_we5jv"]

[sub_resource type="Animation" id="Animation_1t7ec"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/Label3:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1holw"]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 2.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2esjb"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ydcc4"]
resource_name = "fade_out2"
length = 5.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.8, 3.9, 5.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/Label3:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3.7, 3.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3.9, 5.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7johp"]
_data = {
"RESET": SubResource("Animation_1t7ec"),
"fade_in": SubResource("Animation_1holw"),
"fade_out": SubResource("Animation_2esjb"),
"fade_out2": SubResource("Animation_ydcc4")
}

[node name="SplashSceen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekul7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7johp")
}
autoplay = "fade_out"

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1342.0
offset_bottom = 953.0

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -534.0
offset_top = -128.0
offset_right = 543.0
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_cl43o")
theme_override_font_sizes/font_size = 236
text = "Xia   pa"

[node name="TextureRect" type="TextureRect" parent="Panel/Label"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -149.0
offset_right = 759.5
offset_bottom = 645.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.21, 0.21)
texture = ExtResource("2_a38ju")

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = -113.0
offset_top = 99.0
offset_right = 113.0
offset_bottom = 193.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_cl43o")
theme_override_font_sizes/font_size = 66
text = "studio"

[node name="Label3" type="Label" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -461.0
offset_top = -181.0
offset_right = 523.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_we5jv")
theme_override_font_sizes/font_size = 246
text = "物理世界"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -485.0
offset_top = -213.0
offset_right = 1439.0
offset_bottom = 869.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_46yd0")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
